--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.9.0",
+    "react-native-track-player": "^3.2.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "svg": "^0.1.0",
