--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "svgr": "svgr ./src/assets/svg  -d ./src/components/images  --native --icon  --svg-props width=24,height=24"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.7",
     "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-community/checkbox": "^0.5.16",
     "@react-native-community/datetimepicker": "^7.1.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.4.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
@@ -23,8 +25,10 @@
     "formik": "^2.4.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^5.8.0",
+    "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
     "react-native-splash-screen": "^3.3.0",
