--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "formik": "^2.4.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-calendars": "^1.1300.0",
     "react-native-circular-progress": "^1.3.9",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-linear-gradient": "^2.6.2",
