--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-svg": "^13.9.0",
     "react-native-track-player": "^4.0.0-rc04",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-youtube-iframe": "^2.3.0",
     "react-redux": "^8.0.5",
     "svg": "^0.1.0",
     "yup": "^1.2.0"
