--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "formik": "^2.4.1",
+    "lottie-react-native": "^6.2.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-calendars": "^1.1300.0",
