--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-native-community/datetimepicker": "^7.1.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "^4.4.2",
+    "@react-native-firebase/app": "^18.4.0",
+    "@react-native-firebase/auth": "^18.4.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
